wip: Setting up API, tests & other refinements
